--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
     display: none;
   }
 }
+.cd-slider-nav {
+  margin-bottom: 20px; /* change this value as desired */
+}
 </style>
 <script>
     // get the video element
