--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 }
 </style>
 <script>
-    // get the video element
-var video = document.querySelector('.cd-bg-video');
+//     // get the video element
+// var video = document.querySelector('.cd-bg-video');
 
-// check if the screen size is smaller than 768px
-if (window.matchMedia('(max-width: 768px)').matches) {
-  // pause the video
-  video.pause();
-}
+// // check if the screen size is smaller than 768px
+// if (window.matchMedia('(max-width: 768px)').matches) {
+//   // pause the video
+//   video.pause();
+// }
 </script>
 
 <body>
@@ -126,10 +126,10 @@ if (window.matchMedia('(max-width: 768px)').matches) {
                         </div>  -->
 
                         <div class="cd-bg-video-wrapper" data-video="video/cloud">
-                            <video class="cd-bg-video" autoplay loop muted>
+                            <!-- <video class="cd-bg-video" autoplay loop muted>
                               <source src="video/cloud.mp4" type="video/mp4">
                               Your browser does not support HTML5 video.
-                            </video>
+                            </video> -->
                           </div>
                           
                         <div class="row">
@@ -178,11 +178,11 @@ if (window.matchMedia('(max-width: 768px)').matches) {
                     <div class="container-fluid js-tm-page-content" data-page-no="2">
 
                         <div class="cd-bg-video-wrapper" data-video="video/road">
-
+<!-- 
                             <video class="cd-bg-video" autoplay loop muted>
                                 <source src="video/road.mp4" type="video/mp4">
                                 Your browser does not support HTML5 video.
-                              </video>
+                              </video> -->
                             <!-- video element will be loaded using jQuery -->
                         </div> <!-- .cd-bg-video-wrapper -->
                         <div class="row">
@@ -357,10 +357,10 @@ if (window.matchMedia('(max-width: 768px)').matches) {
                     <div class="container-fluid js-tm-page-content" data-page-no="3">
 
                         <div class="cd-bg-video-wrapper" data-video="video/nyc">
-                            <video class="cd-bg-video" autoplay loop muted>
+                            <!-- <video class="cd-bg-video" autoplay loop muted>
                                 <source src="video/nyc.mp4" type="video/mp4">
                                 Your browser does not support HTML5 video.
-                              </video>
+                              </video> -->
                             <!-- video element will be loaded using jQuery -->
                         </div> <!-- .cd-bg-video-wrapper -->
 
@@ -669,10 +669,10 @@ if (window.matchMedia('(max-width: 768px)').matches) {
                     <div class="container-fluid js-tm-page-content" data-page-no="4">
 
                         <div class="cd-bg-video-wrapper" data-video="video/fall">
-                            <video class="cd-bg-video" autoplay loop muted>
+                            <!-- <video class="cd-bg-video" autoplay loop muted>
                                 <source src="video/fall.mp4" type="video/mp4">
                                 Your browser does not support HTML5 video.
-                              </video>
+                              </video> -->
                             <!-- video element will be loaded using jQuery -->
                         </div> <!-- .cd-bg-video-wrapper -->
 
@@ -788,10 +788,11 @@ if (window.matchMedia('(max-width: 768px)').matches) {
                     <div class="container-fluid js-tm-page-content" data-page-no="5">
 
                         <div class="cd-bg-video-wrapper" data-video="video/fall">
-                            <video class="cd-bg-video" autoplay loop muted>
+                            <!-- <video class="cd-bg-video" autoplay loop muted>
                                 <source src="video/fall.mp4" type="video/mp4">
                                 Your browser does not support HTML5 video.
-                              </video>                        </div> <!-- .cd-bg-video-wrapper -->
+                              </video>                         -->
+                        </div> <!-- .cd-bg-video-wrapper -->
 
                         <div class="tm-img-gallery-container">
 
