--- a/index.html
+++ b/index.html
@@ -46,8 +46,36 @@
   }
 }
 .cd-slider-nav {
-  margin-bottom: 120px; /* change this value as desired */
+  margin-bottom: 60px; /* change this value as desired */
 }
+
+.cd-hero {
+  margin-top: 50px;
+  padding-bottom: 50px;
+}
+
+.tm-2-col-container {
+  margin-top: 50px;
+  padding-bottom: 50px;
+}
+
+.tm-2-col-textbox{
+  margin-top: 50px;
+  padding-bottom: 50px;
+}
+
+.tm-img-gallery-container {
+  margin-top: 50px;
+  padding-bottom: 50px;
+}
+
+.container-fluid {
+    
+
+}
+
+
+
 </style>
 <script>
 //     // get the video element
@@ -349,7 +377,6 @@
                 </div> <!-- .cd-full-width -->
 
             </li>
-            <div class="copyrights">Collect from <a href="http://www.cssmoban.com/">cssmoban</a></div>
             <!-- Page 3 -->
             <li>
 
