--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
   margin-bottom: 60px; /* change this value as desired */
 }
 
-.cd-hero {
+/* .cd-hero {
   margin-top: 50px;
   padding-bottom: 50px;
-}
+} */
 
 .tm-2-col-container {
   margin-top: 50px;
@@ -69,10 +69,7 @@
   padding-bottom: 50px;
 }
 
-.container-fluid {
-    
 
-}
 
 
 
