--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 
                                     <div class="tm-2-col-textbox tm-bg-white-translucent">
                                         <div class="text-xs-left tm-textbox tm-textbox-padding">
-                                            <h1 class="tm-text-title">Malaria parasites migration simulation</h1>
+                                            <h1 class="tm-text-title">Malaria exposure risk estimation</h1>
                                             <p class="tm-text"></p>
 
                                             <p class="tm-text-title">A maximum entropy model was trained to estimate the
