--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 }
 
 .tm-2-col-textbox{
-  margin-top: 50px;
-  padding-bottom: 50px;
+   margin-top: 50px;
+  /*padding-bottom: 50px; */
 }
 
 .tm-img-gallery-container {
@@ -70,7 +70,23 @@
 }
 
 
+.tm-flex {
+    display: flex;
+}
 
+.tm-3-col-container {
+    flex-wrap: wrap;
+}
+
+.photo-frame {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.photo-frame img {
+    max-width: 100%;
+}
 
 
 </style>
