--- a/index copy.html
+++ b/index copy.html
@@ -230,7 +230,7 @@
                             <div class="col-xs-12">
                                 <div class="tm-flex tm-3-col-container">
 
-                                    <div class="tm-3-col-textbox tm-bg-white-translucent">
+                                    <div class="tm-2-col-textbox tm-bg-white-translucent">
                                         <div class="text-xs-left tm-textbox tm-textbox-padding">
                                             <h2 class="tm-text-title">Education</h2>
                                             <p class="tm-text"><i>2016&nbsp-&nbsp2021&nbsp:</i> &nbsp Univerisity of
@@ -264,7 +264,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="tm-3-col-textbox tm-bg-white-translucent" >
+                                    <div class="tm-2-col-textbox tm-bg-white-translucent">
                                         <div class="text-xs-left tm-textbox tm-textbox-padding">
 
                                             <h2 class="tm-text-title">Software & Tools</h2>
@@ -319,7 +319,7 @@
 
                                         <div class="text-xs-left tm-textbox tm-2-col-textbox">
                                             <div class="photo-frame" style="height: 60%;">
-                                                <img src="media/tech/tools.png" alt="tech" />
+                                                <img src="media/tech/tech.png" alt="tech" />
                                             </div>
                                         </div>
 
@@ -327,7 +327,7 @@
                                     </div>
 
 
-                                    <div class="tm-3-col-textbox tm-bg-white-translucent">
+                                    <div class="tm-2-col-textbox tm-bg-white-translucent">
                                         <div class="text-xs-left tm-textbox tm-textbox-padding">
 
                                             <h2 class="tm-text-title">Programming</h2>
@@ -375,17 +375,6 @@
                                             </div>
                                             <!--info end-->
 
-                                        </div>
-
-                                        <p></p>
-                                        <p></p>
-
-                                        <p></p>
-
-                                        <div class="text-xs-left tm-textbox tm-2-col-textbox">
-                                            <div class="photo-frame" style="height: 60%;">
-                                                <img src="media/tech/coding.png" alt="tech" />
-                                            </div>
                                         </div>
 
 
