--- a/index.html
+++ b/index.html
@@ -421,6 +421,52 @@
 
                             <div class="col-xs-12">
 
+                                <div class="tm-flex tm-3-col-container">
+                                    <div class="tm-2-col-textbox tm-bg-white-translucent">
+                                        <div class="text-xs-left tm-textbox tm-textbox-padding">
+                                            <div class="text-xs-left tm-textbox tm-2-col-textbox">
+                                                <a href="https://onlinelibrary.wiley.com/doi/10.1111/tgis.13061"
+                                                    target="_blank">
+                                                    <div class="photo-frame">
+                                                        <img src="media/research/research71.png" alt="Flow chart" />
+
+                                                    </div>
+
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="tm-2-col-textbox tm-bg-white-translucent">
+                                        <div class="text-xs-left tm-textbox tm-textbox-padding">
+                                            <h1 class="tm-text-title">Estimating speed with big mobility data</h1>
+                                            <p class="tm-text"></p>
+                                            <p class="tm-text-title">Processing big GPS trajectory data, especially
+                                                extracting information from billions of trajectory points and assigning information to corresponding road segments
+                                                in road networks, is a challenging but necessary task for researchers to take full advantage of big data. In this
+                                                research, we propose an Apache Spark and Sedona-based computing framework that is capable of estimating traffic
+                                                speeds for statewide road networks from GPS trajectory data. Taking advantage of spatial resilient distributed
+                                                datasets supported by Sedona, the framework provides high computing efficiency while using affordable computing
+                                                resources for map matching and waypoint gap filling. Using a mobility dataset of 126 million trajectory points
+                                                collected in California, and a road network inclusive of all road types, we computed hourly speed estimates for
+                                                approximately 600,000 segments across the state. Comparing speed estimates for freeway segments with speed limits,
+                                                our speed estimates showed that speeding on freeways occurred mostly during the nighttime, while analysis of travel
+                                                on residential roads showed that speeds were relatively stable over the 24-h period.</p>
+                                            <div class="photo-frame">
+                                                <p style="text-align:center;"> <img src="media/research/research7.png"
+                                                        width="66%" height="" alt="estimation results" /></p>
+                                            </div>
+                                            <p class="tm-text-title"><b>Related publication:</b> <br>1. Zhang, Peiqi., Stewart, Kathleen., & <b>Li, Yao</b>. (2023). Estimating traffic speed and
+                                                    speeding using passively collected big mobility data and a distributed computing framework. <i>Transactions in GIS</i>,
+                                                    00, 1– 21.</p>
+                                        </div>
+                                    </div>
+
+
+
+                                </div>
+
+
 
                                 <div class="tm-flex tm-3-col-container">
 
@@ -512,7 +558,7 @@
                                                 higher prevalence of malaria
                                                 infection over other occupation groups.<br> </p>
                                             <p class="tm-text-title"><b>Related publication:</b> <br>
-                                                <b>Yao Li</b>, Kathleen Stewart, Kay Thwe Han, Zay Yar Han, Poe P Aung,
+                                                <b>1. Yao Li</b>, Kathleen Stewart, Kay Thwe Han, Zay Yar Han, Poe P Aung,
                                                 Zaw W Thein,
                                                 Thura Htay, Dong Chen, Myaing M Nyunt, Christopher V Plowe,
                                                 Understanding spatio-temporal
