--- a/index.html
+++ b/index.html
@@ -196,11 +196,10 @@
                                         </div>
                                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 tm-2-col-right">
                                             <div class="text-xs-left tm-textbox tm-2-col-textbox">
-                                                <p class="tm-text">Yao Li is a postdoctoral researcher at the Department
-                                                    of Geographic Sciences, Univerisity of Maryland, College Park.
-                                                    Currently interested in the field of Health GIS, human mobitliy,
-                                                    dynamic simulation and visualization.</p>
-                                                <p class="tm-text">Email: liyao@umd.edu</p>
+                                                <p class="tm-text">Yao Li is a Postdoctoral Fellow at the Johns Hopkins Bloomberg School of Public Health.
+                                                    Currently interested in the field of health Geography, human mobility,
+                                                    dynamic simulation and infectious diseases.</p>
+                                                <p class="tm-text">Email: yli620@jhu.edu</p>
                                             </div>
                                         </div>
 
