--- a/index.html
+++ b/index.html
@@ -249,8 +249,10 @@
                                                 <strong>&nbsp&nbsp&nbspRemote Sensing Science and Technology</strong>
                                             </p>
                                             <h2 class="tm-text-title">Experiences</h2>
-                                            <p class="tm-text"><i>2021&nbsp-&nbsppresent&nbsp:</i> &nbsp Postdoctoral
-                                                Researcher for NIH and NSF projects&nbsp.</p>
+                                            <p class="tm-text"><i>2023-09&nbsp-&nbsppresent&nbsp:</i> &nbsp Postdoctoral
+                                                Fellow at the Johns Hopkins Bloomberg School of Public Health&nbsp.</p>
+                                            <p class="tm-text"><i>2021&nbsp-&nbsp2023&nbsp:</i> &nbsp Postdoctoral
+                                                    Researcher at Univerisity of Maryland, College Park&nbsp.</p>
                                             <p class="tm-text"><i>2017&nbsp-&nbsp2021&nbsp:</i> &nbsp Research Assistant
                                                 for NIH, NASA and Gates Foundation projects&nbsp.</p>
                                             <p class="tm-text"><i>2016&nbsp-&nbsp2017&nbsp:</i> &nbsp Teaching Assistant
