--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
                                         </div>
                                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 tm-2-col-right">
                                             <div class="text-xs-left tm-textbox tm-2-col-textbox">
-                                                <p class="tm-text">Yao Li is a Postdoctoral Fellow at the Johns Hopkins Bloomberg School of Public Health.
+                                                <p class="tm-text">Yao Li is a Research Associate at the Johns Hopkins Bloomberg School of Public Health.
                                                     Currently interested in the field of health Geography, human mobility,
-                                                    dynamic simulation and infectious diseases.</p>
+                                                    dynamic simulation and infectious diseases. Page is <a href="https://publichealth.jhu.edu/faculty/4781/yao-li">here</a>. </p>
                                                 <p class="tm-text">Email: yli620@jhu.edu</p>
                                             </div>
                                         </div>
@@ -249,7 +249,9 @@
                                                 <strong>&nbsp&nbsp&nbspRemote Sensing Science and Technology</strong>
                                             </p>
                                             <h2 class="tm-text-title">Experiences</h2>
-                                            <p class="tm-text"><i>2023-09&nbsp-&nbsppresent&nbsp:</i> &nbsp Postdoctoral
+                                            <p class="tm-text"><i>2024-03&nbsp-&nbsppresent&nbsp:</i> &nbsp Research Associate
+                                                 at the Johns Hopkins Bloomberg School of Public Health&nbsp.</p>
+                                            <p class="tm-text"><i>2023-09&nbsp-&nbsp2024-03&nbsp:</i> &nbsp Postdoctoral
                                                 Fellow at the Johns Hopkins Bloomberg School of Public Health&nbsp.</p>
                                             <p class="tm-text"><i>2021&nbsp-&nbsp2023&nbsp:</i> &nbsp Postdoctoral
                                                     Researcher at Univerisity of Maryland, College Park&nbsp.</p>
